bindings/cryptlib.rs

unsafe extern "C" {
    pub fn cryptGetCertExtension(
        certificate: CRYPT_CERTIFICATE,
        oid: *const ::std::os::raw::c_char,
        criticalFlag: *mut ::std::os::raw::c_int,
        extension: *mut ::std::os::raw::c_void,
        extensionMaxLength: ::std::os::raw::c_int,
        extensionLength: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptAddCertExtension(
        certificate: CRYPT_CERTIFICATE,
        oid: *const ::std::os::raw::c_char,
        criticalFlag: ::std::os::raw::c_int,
        extension: *const ::std::os::raw::c_void,
        extensionLength: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptDeleteCertExtension(
        certificate: CRYPT_CERTIFICATE,
        oid: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptSignCert(
        certificate: CRYPT_CERTIFICATE,
        signContext: CRYPT_CONTEXT,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptCheckCert(
        certificate: CRYPT_CERTIFICATE,
        sigCheckKey: CRYPT_HANDLE,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptImportCert(
        certObject: *const ::std::os::raw::c_void,
        certObjectLength: ::std::os::raw::c_int,
        cryptUser: CRYPT_USER,
        certificate: *mut CRYPT_CERTIFICATE,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptExportCert(
        certObject: *mut ::std::os::raw::c_void,
        certObjectMaxLength: ::std::os::raw::c_int,
        certObjectLength: *mut ::std::os::raw::c_int,
        certFormatType: CRYPT_CERTFORMAT_TYPE,
        certificate: CRYPT_CERTIFICATE,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptCAAddItem(
        keyset: CRYPT_KEYSET,
        certificate: CRYPT_CERTIFICATE,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptCAGetItem(
        keyset: CRYPT_KEYSET,
        certificate: *mut CRYPT_CERTIFICATE,
        certType: CRYPT_CERTTYPE_TYPE,
        keyIDtype: CRYPT_KEYID_TYPE,
        keyID: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptCADeleteItem(
        keyset: CRYPT_KEYSET,
        certType: CRYPT_CERTTYPE_TYPE,
        keyIDtype: CRYPT_KEYID_TYPE,
        keyID: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptCACertManagement(
        certificate: *mut CRYPT_CERTIFICATE,
        action: CRYPT_CERTACTION_TYPE,
        keyset: CRYPT_KEYSET,
        caKey: CRYPT_CONTEXT,
        certRequest: CRYPT_CERTIFICATE,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t*\n\t\t\t\t\t\t\tEnvelope and Session Functions\t\t\t\t\t*\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t*"]
    pub fn cryptCreateEnvelope(
        envelope: *mut CRYPT_ENVELOPE,
        cryptUser: CRYPT_USER,
        formatType: CRYPT_FORMAT_TYPE,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptDestroyEnvelope(envelope: CRYPT_ENVELOPE) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptCreateSession(
        session: *mut CRYPT_SESSION,
        cryptUser: CRYPT_USER,
        formatType: CRYPT_SESSION_TYPE,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptDestroySession(session: CRYPT_SESSION) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptPushData(
        envelope: CRYPT_HANDLE,
        buffer: *const ::std::os::raw::c_void,
        length: ::std::os::raw::c_int,
        bytesCopied: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptFlushData(envelope: CRYPT_HANDLE) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptPopData(
        envelope: CRYPT_HANDLE,
        buffer: *mut ::std::os::raw::c_void,
        length: ::std::os::raw::c_int,
        bytesCopied: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t*\n\t\t\t\t\t\t\t\tDevice Functions\t\t\t\t\t\t\t*\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t*"]
    pub fn cryptDeviceOpen(
        device: *mut CRYPT_DEVICE,
        cryptUser: CRYPT_USER,
        deviceType: CRYPT_DEVICE_TYPE,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptDeviceClose(device: CRYPT_DEVICE) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptDeviceQueryCapability(
        device: CRYPT_DEVICE,
        cryptAlgo: CRYPT_ALGO_TYPE,
        cryptQueryInfo: *mut CRYPT_QUERY_INFO,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptDeviceCreateContext(
        device: CRYPT_DEVICE,
        cryptContext: *mut CRYPT_CONTEXT,
        cryptAlgo: CRYPT_ALGO_TYPE,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t*\n\t\t\t\t\t\t\tUser Management Functions\t\t\t\t\t\t*\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t*"]
    pub fn cryptLogin(
        user: *mut CRYPT_USER,
        name: *const ::std::os::raw::c_char,
        password: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cryptLogout(user: CRYPT_USER) -> ::std::os::raw::c_int;
}
